# vector

./: .gitignore  README.md  pyproject.toml
experiments/configs/: datasets.yaml  search.yaml
scripts/: download_all.sh  download_mba.sh  download_nab.sh  download_smap_msl.sh  download_smd.sh  download_ucr.sh  generate_dummy_swat.py  generate_dummy_wadi.py
tests/: conftest.py  test_baselines_pareto.py  test_cli.py  test_data_pipeline.py  test_esn.py  test_evaluation.py  test_paper.py  test_scoring.py  test_search.py
vector/: __init__.py  __main__.py  baselines.py  paper.py  pareto.py  results.py
vector/data/: __init__.py  config.py  pipeline.py  preprocess.py  registry.py
vector/data/loaders/: __init__.py  mba.py  msl.py  nab.py  smap.py  smd.py  swat.py  ucr.py  wadi.py
vector/esn/: __init__.py  reservoir.py
vector/evaluation/: __init__.py  metrics.py  runner.py
vector/scoring/: __init__.py  _spot.py  mdrs.py  threshold.py
vector/search/: __init__.py  config.py  engine.py  objective.py
