[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "vector"
version = "0.1.0"
description = "Multi-objective NAS for Reservoir Computing anomaly detection"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "pyyaml>=6.0",
    "openpyxl>=3.1",
    "requests>=2.31",
    "scipy>=1.11",
    "tabulate>=0.9",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[project.scripts]
vector = "vector.__main__:main"

[tool.setuptools.packages.find]
include = ["vector*"]
